# i3ipc-python

./: .flake8  .gitignore  .style.yapf  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.am  README.md  README.rst  autogen.sh  configure.ac  i3ipc.py  requirements.txt  run-tests.py  setup.cfg  setup.py  test-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: .gitignore  Makefile  aio-con.rst  aio-connection.rst  con.rst  conf.py  connection.rst  events.rst  index.rst  replies.rst  serve.sh
examples/: README.md  adapt_window_transparency.py  app-on-ws-init.py  asyncio-i3status-wrapper.py  avoid-ws.py  command-on-exit.py  disable-standby-fs.py  floating-mode.py  floating-single.py  focus-last.py  focus-next-visible.py  focus_next_visible.py  focused-windows.py  i3-cmd.py  i3-container-commander.py  i3-cycle-focus.py  i3-debug-console.py  ipc-trace.py  nth_window_in_workspace.py  open-floating-on-ws.py  run_vim_session.py  stop-application-on-unfocus.py  stop_application_on_unfocus.py  tiling-indicator.py  windows_with_name_in_workspace.py  workspace-new.py  workspace_renumber.py  wsdnames.py
examples/i3-focus/: focus-app.py  focus-current-app-window.py  (+2 more)
i3ipc/: __init__.py  __version__.py  con.py  connection.py  events.py  i3ipc.py  model.py  replies.py
overrides/: Makefile.am  i3ipc.py
test/: i3.config  ipctest.py  test_event_exceptions.py  test_get_binding_state.py  test_get_bindings_modes.py  test_get_config.py  test_get_marks.py  test_leaves.py  test_restart.py  test_shutdown_event.py  test_ticks.py  test_window.py
(+28 files in other folders)
